--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,95 +7,116 @@
 
 {% block page_header %}
 <div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
+  <div class="row">
+    <div class="col"></div>
+  </div>
 </div>
-{% endblock %}
+{% endblock %} 
 
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
         <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">My <span style="color: goldenrod;">Profile</span></h2>
-            <hr>
+            <hr />
+            <h2 class="logo-font mb-4">
+                My <span style="color: goldenrod">Profile</span>
+            </h2>
+            <hr />
         </div>
     </div>
+    <!-- Delivery Info Section -->
     <div class="row">
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Default Delivery Information</p>
-            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-            </form>
+          <p class="text-muted">Default Delivery Information</p>
+          <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+            {% csrf_token %} 
+            {{ form|crispy }}
+            <button class="btn btn-black rounded-0 text-uppercase float-right">
+              Update Information
+            </button>
+          </form>
         </div>
+        <!-- Wishlist Section -->
         <div class="col-12 col-lg-6">
-            <p class="text-muted">My Wishlist</p>
             {% if wishlist_items %}
             <div class="wishlist">
-                <ul class="list-unstyled">
+                <p class="text-muted">My Wishlist</p>
+                <div class="row">
                     {% for item in wishlist_items %}
-                        <li class="mb-2">
-                            <a href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a>
+                    <div class="col-12 col-sm-12 mb-2">
+                        <div class="row">
+                        <!-- Show Image -->
+                        <div class="col-12 col-sm-4">
+                            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="img-fluid">
+                        </div>
+                        <!-- Show name and price -->
+                        <div class="col-12 col-sm-4">
+                            <p><a href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a></p>
+                            <p>€{{ item.product.price }}</p>
+                        </div>
+                        <!-- Delete-Button -->
+                        <div class="col-12 col-sm-4">
                             <a href="{% url 'toggle_wishlist' item.product.id %}" class="btn btn-sm btn-danger">Remove from Wishlist</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            {% else %}
-                <p>Your wishlist is empty.</p>
-            {% endif %}
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">Order History</p>
-            <div class="order-history table-responsive">
-                <table class="table table-sm table-borderless">
-                    <thead>
-                        <tr>
-                            <th>Order Number</th>
-                            <th>Date</th>
-                            <th>Items</th>
-                            <th>Order Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for order in orders %}
-                            <tr>
-                                <td>
-                                    <a href="{% url 'order_history' order.order_number %}" 
-                                    title="{{ order.order_number }}">
-                                        {{ order.order_number|truncatechars:6 }}
-                                    </a>
-                                </td>
-                                <td>{{ order.date }}</td>
-                                <td>
-                                    <ul class="list-unstyled">
-                                        {% for item in order.lineitems.all %}
-                                            <li class="small">
-                                                {% if item.product.has_sizes %}
-                                                    Size {{ item.product.size|upper }}
-                                                {% endif %}{{ item.product.name }} x{{ item.quantity }}
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
-                                </td>
-                                <td>€{{ order.grand_total }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
         </div>
+        {% else %}
+        <p>Your wishlist is empty.</p>
+        {% endif %}
     </div>
 </div>
-{% endblock %}
-
-{% block postloadjs %}
+<!-- Order History Section -->
+<div class="row mt-4">
+    <div class="col-12">
+        <p class="text-muted">Order History</p>
+        <div class="order-history table-responsive">
+            <table class="table table-sm table-borderless">
+                <thead>
+                    <tr>
+                        <th>Order Number</th>
+                        <th>Date</th>
+                        <th>Items</th>
+                        <th>Order Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for order in orders %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
+                                {{ order.order_number|truncatechars:6 }}
+                            </a>
+                        </td>
+                        <td>{{ order.date }}</td>
+                        <td>
+                            <ul class="list-unstyled">
+                                {% for item in order.lineitems.all %}
+                                <li class="small">
+                                    {% if item.product.has_sizes %}
+                                    Size {{ item.product.size|upper }}
+                                    {% endif %}
+                                    {{ item.product.name}} x{{ item.quantity }}
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                        <td>€{{ order.grand_total }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endblock %} 
+  
+  {% block postloadjs %} 
     {{ block.super }}
     <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
-{% endblock %}
+  {% endblock %}
+</div>
